# containerize

./: docker-compose.yaml
goapp/: .gitignore  devbox.json  go.mod  main.go
pyapp/: .gitignore  devbox.json  main.py  pyproject.toml
